Added new dockerfile

--- a/RediSearchCore/Dockerfile
+++ b/RediSearchCore/Dockerfile
@@ -1,6 +1,22 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
-
 EXPOSE 80
-COPY bin/Release/netcoreapp2.2/publish/ /app/
+EXPOSE 443
+
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
+WORKDIR /src
+COPY ["RediSearchCore/RediSearchCore.csproj", "RediSearchCore/"]
+COPY ["RediSearchCore.Infrastructure/RediSearchCore.Infrastructure.csproj", "RediSearchCore.Infrastructure/"]
+COPY ["RediSearchCore.Core/RediSearchCore.Core.csproj", "RediSearchCore.Core/"]
+RUN dotnet restore "RediSearchCore/RediSearchCore.csproj"
+COPY . .
+WORKDIR "/src/RediSearchCore"
+RUN dotnet build "RediSearchCore.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "RediSearchCore.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "RediSearchCore.dll"]
