--- a/RediSearchCore/Properties/launchSettings.json
+++ b/RediSearchCore/Properties/launchSettings.json
@@ -25,6 +25,18 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44351"
+      },
+      "httpPort": 54344,
+      "useSSL": true,
+      "sslPort": 44351
     }
   }
 }
