--- a/RediSearchCore/appsettings.Development.json
+++ b/RediSearchCore/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft": "Information"
     }
   },
-  "redisConnection": "ec2-3-8-133-144.eu-west-2.compute.amazonaws.com"
+  "redisConnection": "10.2.15.47"
 }
