--- a/RediSearchCore.Infrastructure/RediSearchCore.Infrastructure.csproj
+++ b/RediSearchCore.Infrastructure/RediSearchCore.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NRediSearch" Version="2.0.0-alpha.169" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
