--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
-dist: bionic
+dist: xenial
 sudo: required
 mono: none
-dotnet: 3.0
+dotnet: 3.1
 solution: RediSearchCore.sln
 before_install:
   - docker pull redislabs/redisearch:latest
