--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -11,10 +11,10 @@ jobs:
     - name: Setup RediSearch
       uses: caiomarruda/redisearch-action@v1.0.1
     - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - name: Setup .NET 5
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.100
+        dotnet-version: '5.0.x'
     - name: Build with dotnet
       run: |
         dotnet build --configuration Release
