--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 dist: xenial
 sudo: required
 mono: none
-dotnet: 5.0.8
+dotnet: 5.0.x
 solution: RediSearchCore.sln
 before_install:
   - docker pull redislabs/redisearch:latest
